fix:theme type fixed in fragments

--- a/app/entrypoints/renderer/locales/ru.json
+++ b/app/entrypoints/renderer/locales/ru.json
@@ -10,5 +10,5 @@
   "users-modal.title": "Команда Atlantis",
   "users-modal.subTitle": "Участники",
   "users-modal.button-remove": "Удалить",
-  "users-ешеду.title": "Команда"
+  "users-title.title": "Команда"
 }
