refactor(locales): added entries

--- a/app/entrypoints/renderer/locales/ru.json
+++ b/app/entrypoints/renderer/locales/ru.json
@@ -9,9 +9,9 @@
   "add-member-to-organization-modal_input.placeholder": "Team member",
   "organization-card_member.one": "member",
   "organization-card_member.many": "members",
-  "confirm-deleting-organization.warning": "Вы уверены, что хотите исключить пользователя из данной организации?",
-  "confirm-deleting-organization.yes": "Да",
-  "confirm-deleting-organization.no": "Нет",
+  "remove-organization-request.text": "Вы уверены, что хотите исключить пользователя из данной организации?",
+  "yes": "Да",
+  "no": "Нет",
   "logo-title": "Team management system",
   "notifications-modal.title": "Уведомления",
   "notifications-modal.mark-all-read": "Отметить все, как прочитанное",
